--- a/index.html
+++ b/index.html
@@ -13,22 +13,17 @@
 <body class="body">
   <main class="main">
     <section class="section">
+      <button class="section__button"><a class="section__button--link" href="https://mr-front-end-dev.github.io/Bible-Verses-Psalms--DE/"><span class="section__button--size">&#x21e6;</span></a></button>
       <button class="section__button"><a class="section__button--link" href="https://mr-front-end-dev.github.io/Bible-Verses-sgwaq--EN/">EN</a></button>
       <button class="section__button"><a class="section__button--link" href="https://mr-front-end-dev.github.io/Bible-Verses-sgwaq--RU/">RU</a></button>
       <button class="section__button"><a class="section__button--link" href="https://mr-front-end-dev.github.io/Bible-Verses-sgwaq--ES/">ES</a></button>
       <button class="section__button"><a class="section__button--link" href="https://mr-front-end-dev.github.io/Bible-Verses-sgwaq--PL/">PL</a></button>
       <button class="section__button"><a class="section__button--link" href="https://mr-front-end-dev.github.io/Bible-Verses-sgwaq--UA/">UA</a></button>
-      <button class="section__button--underscore">__</button>
-      <button class="section__button"><a class="section__button--link" href="https://mr-front-end-dev.github.io/Bible-Verses-b--DE/">B</a></button>
-      <button class="section__button"><a class="section__button--link" href="https://mr-front-end-dev.github.io/Bible-Verses-white-green--DE/">WGr</a></button>
-      <button class="section__button"><a class="section__button--link" href="https://mr-front-end-dev.github.io/Bible-Verses-white-purple--DE/">WP</a></button>
-      <button class="section__button"><a class="section__button--link" href="https://mr-front-end-dev.github.io/Bible-Verses-white-pink--DE/">WP</a></button>
-      <button class="section__button"><a class="section__button--link" href="https://mr-front-end-dev.github.io/Bible-Verses-white-blue--DE/">WB</a></button>
-      <button class="section__button"><a class="section__button--link" href="https://mr-front-end-dev.github.io/Bible-Verses-white-aqua--DE/">WAq</a></button>
-      <button class="section__button"><a class="section__button--link" href="https://mr-front-end-dev.github.io/Bible-Verses-p--DE/">P</a></button>
-      <button class="section__button"><a class="section__button--link" href="https://mr-front-end-dev.github.io/Bible-Verses-pink--DE/">P</a></button>
-      <button class="section__button"><a class="section__button--link" href="https://mr-front-end-dev.github.io/Bible-Verses-white-red--DE/">WR</a></button>
-      <button class="section__button"><a class="section__button--link" href="https://mr-front-end-dev.github.io/Bible-Verses-white-grey--DE/">WG</a></button>
+    </section>
+  </main>
+  <div class="div__underline--lightgrey"></div>
+  <main class="main">
+    <section class="section">
         <h1 class="section__h1">Psalmen 51:1-12 & 15-19 (SCH51)</h1>
         <p class="section__paragraph">1. Dem Vorsänger. Ein Psalm Davids. Als der Prophet Nathan zu ihm kam, weil er zu Batseba eingegangen war: <span class="section--bold section__span--coral--light">O Gott</span>, <span class="section--bold section__span--aqua--light">sei mir gnädig</span>, <span class="section__span--coral--light">nach deiner Güte</span>, <span class="section__span--aqua--light">tilge meine Übertretungen nach deiner großen Barmherzigkeit!</span></p>
         <p class="section__paragraph">2. <span class="section--bold section__span--coral--light">Wasche mich gründlich von meiner Schuld</span> <span class="section__span--coral">und reinige mich von meiner Sünde</span>;</p>
