--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
 <body class="body">
   <main class="main">
     <section class="section">
-      <button class="section__button"><a class="section__button--link" href="https://mr-front-end-dev.github.io/Bible-Verses-sgwaq--EN/">EN</a></button>
-      <button class="section__button"><a class="section__button--link" href="https://mr-front-end-dev.github.io/Bible-Verses-sgwaq--RU/">RU</a></button>
-      <button class="section__button"><a class="section__button--link" href="https://mr-front-end-dev.github.io/Bible-Verses-sgwaq--ES/">ES</a></button>
-      <button class="section__button"><a class="section__button--link" href="https://mr-front-end-dev.github.io/Bible-Verses-sgwaq--PL/">PL</a></button>
-      <button class="section__button"><a class="section__button--link" href="https://mr-front-end-dev.github.io/Bible-Verses-sgwaq--UA/">UA</a></button>
+      <button class="section__button"><a class="section__button--link" href="https://web-fullstack-dev.github.io/Bible-Verses-sgwaq--EN/">EN</a></button>
+      <button class="section__button"><a class="section__button--link" href="https://web-fullstack-dev.github.io/Bible-Verses-sgwaq--RU/">RU</a></button>
+      <button class="section__button"><a class="section__button--link" href="https://web-fullstack-dev.github.io/Bible-sgwaq--ES/">ES</a></button>
+      <button class="section__button"><a class="section__button--link" href="https://web-fullstack-dev.github.io/Bible-Verses-sgwaq--PL/">PL</a></button>
+      <button class="section__button"><a class="section__button--link" href="https://web-fullstack-dev.github.io/Bible-Verses-sgwaq--UA/">UA</a></button>
     </section>
   </main>
   <div class="div__underline--lightgrey"></div>
